// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchToggleContainer /> should be rendered 1`] = `
<div>
  <label
    className="toggle-button"
    onClick={[Function]}
  >
    <input
      className="toggle-button__input toggle-button__input--checked"
      defaultChecked="checked"
      name="search"
      type="radio"
    />
    <span
      className="toggle-button__text toggle-button__text--checked"
    >
      Release date
    </span>
  </label>
  <label
    className="toggle-button"
    onClick={[Function]}
  >
    <input
      className="toggle-button__input"
      defaultChecked={false}
      name="search"
      type="radio"
    />
    <span
      className="toggle-button__text"
    >
      Rating
    </span>
  </label>
</div>
`;

exports[`<SortToggleContainer /> should be rendered 1`] = `
<div>
  <label
    className="toggle-button toggle-button--no--background"
    onClick={[Function]}
  >
    <input
      className="toggle-button__input toggle-button__input--no-background toggle-button__input--checked"
      defaultChecked="checked"
      name="sort"
      type="radio"
    />
    <span
      className="toggle-button__text toggle-button__text--no--background toggle-button__text--checked toggle-button__text--no--background--checked"
    >
      Release date
    </span>
  </label>
  <label
    className="toggle-button toggle-button--no--background"
    onClick={[Function]}
  >
    <input
      className="toggle-button__input toggle-button__input--no-background"
      defaultChecked={false}
      name="sort"
      type="radio"
    />
    <span
      className="toggle-button__text toggle-button__text--no--background"
    >
      Rating
    </span>
  </label>
</div>
`;
